--- a/client/docItem.html
+++ b/client/docItem.html
@@ -13,10 +13,13 @@
     </div>
 
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-12">
           {{> editor}}
       </div>
-      <div class="col-md-6">
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <h3>Output</h3>
         {{> viewer}}
       </div>
     </div>
@@ -27,8 +30,6 @@
 	</div><!-- end of docItem container -->
 
 </template>
-
-
 
 
 
