--- a/client/justCollab.html
+++ b/client/justCollab.html
@@ -1,6 +1,6 @@
 <template name="ApplicationLayout">
 <head>
-  <title>JustCollab</title>
+  <title>JustCollab by Rohan</title>
 </head>
 
     {{> yield "header"}}
