--- a/client/docList.html
+++ b/client/docList.html
@@ -10,4 +10,11 @@
   		{{/each}}
   		</div>
 	</div>
+  <nav class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container">
+      <ul class="nav navbar-nav navbar-right">
+        <li>Made by Rohan Kar</li>
+      </ul>
+    </div>
+  </nav>
 </template>
